--- a/app/src/main/res/layout/html_page_fragment_item.xml
+++ b/app/src/main/res/layout/html_page_fragment_item.xml
@@ -10,40 +10,40 @@
         android:id="@+id/html_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="12dp"
         android:text="Address goes here"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="12dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/last_checked_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="12dp"
         android:text="@string/last_checked"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/html_address"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="34dp"
-        android:layout_margin="12dp"/>
+        tools:layout_editor_absoluteY="34dp" />
 
     <TextView
         android:id="@+id/last_checked_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.Material.Small"
         android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="@id/last_checked_text"
-        app:layout_constraintStart_toEndOf="@id/last_checked_text" />
+        android:textAppearance="@android:style/TextAppearance.Material.Small"
+        app:layout_constraintStart_toEndOf="@id/last_checked_text"
+        app:layout_constraintTop_toTopOf="@id/last_checked_text" />
 
     <TextView
         android:id="@+id/last_updated_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="12dp"
         android:text="@string/last_updated"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/last_checked_text"
-        android:layout_margin="12dp"/>
+        app:layout_constraintTop_toBottomOf="@id/last_checked_text" />
 
     <TextView
         android:id="@+id/last_updated_time"
@@ -51,8 +51,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:textAppearance="@android:style/TextAppearance.Material.Small"
-        app:layout_constraintTop_toTopOf="@id/last_updated_text"
-        app:layout_constraintStart_toEndOf="@id/last_updated_text" />
+        app:layout_constraintStart_toEndOf="@id/last_updated_text"
+        app:layout_constraintTop_toTopOf="@id/last_updated_text" />
 
     <ImageButton
         android:id="@+id/edit_entry_button"
@@ -63,5 +63,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/compose_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/edit_entry_button"
+        app:layout_constraintTop_toTopOf="@id/edit_entry_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
